# glcoregen

./: CMakeLists.txt  LICENSE  README.md  exts.txt  gl21.txt  gl33.txt  gl43.txt  gl45.txt  glcoregen2.py  gles2.txt
include/: framework.h  win32keys.h
src/: test.cpp
src/sdl/: framework.c
src/win32/: threads.c  windows.c
src/x11/: window.c
